# linksapp-proto

./: .gitignore  LICENSE  README.md  TODO.md
api/: .env  Cargo.toml
api/src/: config_old.txt  configs.rs  errors.rs  errors_old.txt  main.rs  main_old.txt
api/src/auth/: admin.rs  auth.rs  claim.rs  google_openid.rs  handlers.rs  invite.rs  mod.rs  model.rs  password_handler.rs  ses_client.rs  static_files.rs  token.rs  user.rs  utils.rs
api/src/banner/: db.rs
api/src/category/: models.rs
api/src/links/: db.rs  handlers.rs  mod.rs  models.rs
api/src/posts/: mod.rs
api/src/tags/: db.rs
api/src/users/: db.rs  handlers.rs  models.rs
front/: Cargo.toml
front/src/: main.rs
front/src/components/: add_link.rs  header.rs  hero_confirm.rs  hero_mobile.rs  hero_profile.rs  hero_signup.rs  index_hero.rs  layout.rs  link_list.rs  mod.rs
front/src/httpreq/: feeds.rs  link.rs  mod.rs  model.rs  user.rs
front/src/templates/: account.rs  index.rs  linkpage.rs  mod.rs
