[package]
name = "front"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perseus = { version = "0.4.0-beta.10", features = ["hydrate"] }
sycamore = { version = "^0.8.1", features = ["suspense"] }
# sycamore = "=0.8.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.81"
lazy_static = "1.4.0"
derive_more = "0.99.17"
futures = "0.3.21"
chrono = "0.4.19"
walkdir = "2.3.2"
dotenv = "0.15.0"
config = "0.13.1"
getrandom = { version = "0.2.5", features = ["js"] }
gloo-timers = { version = "0.2.3", features = ["futures"] }
log = "0.4.14"
rand = "0.8.5"
wasm-bindgen = "0.2.79"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.21.1", features = [ "macros", "rt", "rt-multi-thread" ] }
perseus-actix-web = { version = "=0.4.0-beta.9", features = [ "dflt-server" ] }
reqwest = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwasm = "0.4"
rexie = "0.4.2"
web-sys = { version = "0.3", features = [ "Storage" ] }

[dependencies.web-sys]
features = ["InputEvent", "KeyboardEvent", "Location", "Storage"]
version = "0.3.56"
